fix: add z-index

--- a/src/assert/atom.less
+++ b/src/assert/atom.less
@@ -2042,7 +2042,7 @@ z-index
 @zs: 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 100, 200, 300, 1000, 2000, 3000, 10000, 20000, 50000, 60000;
 
 each(@zs, {
-        .z-@{value} {
+        .z-@{value},.z@{value} {
             z-index:@value;
         }
     }
